--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "akerbel/whmcs-easy-addons",
-    "version": "1.0.1",
+    "version": "v1.0.2",
     "description": "Whmcs Addon Admin Page Controller",
     "keywords": ["whmcs"],
     "homepage": "https://github.com/akerbel/whmcs-easy-addons",
